--- a/Yuwei Wang Capstone Project/custom.bib
+++ b/Yuwei Wang Capstone Project/custom.bib
@@ -61,17 +61,9 @@
   year={2022}
 }
 
-@inproceedings{valenzuela-escarcega-etal-2016-odins,
-    title = "Odin{'}s Runes: A Rule Language for Information Extraction",
-    author = "Valenzuela-Esc{\'a}rcega, Marco A.  and
-      Hahn-Powell, Gus  and
-      Surdeanu, Mihai",
-    booktitle = "Proceedings of the Tenth International Conference on Language Resources and Evaluation ({LREC}'16)",
-    month = may,
-    year = "2016",
-    address = "Portoro{\v{z}}, Slovenia",
-    publisher = "European Language Resources Association (ELRA)",
-    url = "https://aclanthology.org/L16-1050",
-    pages = "322--329",
-    abstract = "Odin is an information extraction framework that applies cascades of finite state automata over both surface text and syntactic dependency graphs. Support for syntactic patterns allow us to concisely define relations that are otherwise difficult to express in languages such as Common Pattern Specification Language (CPSL), which are currently limited to shallow linguistic features. The interaction of lexical and syntactic automata provides robustness and flexibility when writing extraction rules. This paper describes Odin{'}s declarative language for writing these cascaded automata.",
-}
+
+@misc{Culnan.ea:2023,
+	author = {John Culnan and Ayesha Qamar and Meghavarshini Krishnaswamy and Yuwei Wang and Chen Chen and Md Messal Monem Miah and Shahriar Hormozi and Jonathan Tong and Ruihong Huang and Adarsh Pyarelal},
+	note = {(Manuscript in preparation)},
+	title = {MultiCAT: Multimodal Communication Annotations for Teams},
+	year = {2023}}
